# Rexus.app

./: .bandit  .coverage  .dockerignore  .env  .env.example  .gitignore  ADMIN_PERMISSIONS_FIX_SUMMARY.md  ANALISIS_ATRIBUTOS_NONE.md  ANALISIS_CAMPOS_FORMULARIOS.md  ANALISIS_CODIGO_REXUS.md  ANALISIS_MODULO_COMPRAS.md  ANALISIS_MODULO_CONFIGURACION.md  ANALISIS_MODULO_INVENTARIO.md  ANALISIS_MODULO_PEDIDOS.md  AUDITORIA_APLICACION.md  AUDITORIA_COMPLETA_CONTROLLERS_UX.md  AUDITORIA_REAL_TESTS_2025.md  AUDITORIA_TESTS_FALTANTES.md  AUDIT_DUPLICADOS.py  AUDIT_RESTRUCTURACION_COMPLETA.md  AUDIT_RESTRUCTURACION_FINAL.md  BANDIT_SECURITY_REPORT.md  CHECKLIST_AUDITORIA_MODULOS.md  CHECKLIST_AUDITORIA_TOTAL.md  CHECKLIST_DESPLIEGUE.md  CHECKLIST_IMPLEMENTACION_ACTUALIZADO.md  CHECKLIST_IMPLEMENTACION_TOTAL.md  CHECKLIST_REXUS.md  CLAUDE.md  CONFIGURACION_BASE_DATOS.md  CONFIGURACION_ROLES_USUARIOS.md  CORRECCIONES_Y_SIGUIENTES_PASOS.md  CORRECCION_ADMINISTRACION_CONTROLLER.md  CORRECCION_LOGISTICA_CONTROLLER.md  CORRECCION_LOGISTICA_CONTROLLER_FINAL.md  CORRECCION_SQL_INJECTION_EJEMPLO.py  CORRECCION_USUARIOS_CONTROLLER.md  Checklist pendientes.md  DASHBOARD_MODERNIZATION_REPORT.md  DATABASE_PERMISSIONS_DIAGNOSIS.md  (+267 more)
.claude/: settings.local.json
AUDITORIA_EXPERTA_2025/: patrones_riesgo.md  resumen_controllers.md
backups/: backup_history.json  health_report_20250819_125423.json
backups_error_handling/: auth_manager.py.backup_20250809_165613
backups_feedback/: administracion_view_backup.py  auditoria_view_backup.py  configuracion_view_backup.py  logistica_view_backup.py  (+3 more)
(+10546 files in other folders)
